adding local storage for apt date, time, vaccine brand

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ table {
     text-decoration:  underline;
 }
 
-.locationheading, .dateheading,.appointmentformheader {
+.locationheading, .dateheading,.appointmentformheader, .brandheading {
     font-weight:  bold;
 }
 
