adding style changes to cancel apt

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ table {
     text-decoration:  underline;
 }
 
-.cancelappointment, .forgotpassword {
+.forgotpassword {
     text-decoration:  underline;
 }
 
